ISSUE-11274  Themes: rune-core on mobile not able to use Product Q and A

--- a/rune-core/css/sidebar.css
+++ b/rune-core/css/sidebar.css
@@ -138,7 +138,7 @@
         transition: -webkit-transform 500ms ease;
         transition: transform 500ms ease;
         transition: transform 500ms ease, -webkit-transform 500ms ease;
-        z-index: 2;
+        z-index: 2000;
     }
 
     body.pushable > .pusher {
